# Spotify-api-test

./: .env.example  .gitignore  Jenkinsfile  Makefile  README.md  _ci_parse_results.py  classify_endpoints.py  cli.py  endpoint_classification.json  environment.xml  extract_api.py  extracted_endpoints.json  generate_data_yaml.py  generate_tests.py  pyproject.toml  requirements.txt  review_and_improve.py  run_pipeline.py
prompts/: prompt_albums__albums.txt  prompt_albums__albums_{id}.txt  prompt_classify.txt  prompt_stateful.txt
src/: __init__.py  auditor.py  classifier.py  config.py  coverage.py  extractor.py  llm_client.py  logger.py  pipeline.py  ref_resolver.py  reviewer.py  test_generator.py  yaml_generator.py
test_data/: albums.yaml  artists.yaml
tests/: conftest.py  test_data_driven.py  test_stateful_workflows.py
tests/unit/: conftest.py  test_config.py  test_extractor.py  test_ref_resolver.py
