[project]
name = "spotify-api-tester"
version = "2.0.0"
description = "LLM驱动的 Spotify API 自动化测试框架 — 从 OpenAPI 规范自动生成测试用例"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "pytest>=7.0",
    "tenacity>=8.0",
    "allure-pytest>=2.13.5",
]

[project.scripts]
spotify-test = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
